# eth-partner

./: .env.example  .gitignore  Cargo.toml  README.md  eth-partner-log.txt  history.txt  system-prompt.md
.github/workflows/: rust.yml
.windsurf/rules/: create-prd.md  generate-tasks.md  mcp-guidelines.md  process-task-list.md  project.md  rust-guidelines.md
mcp-wallet/: Cargo.toml  README.md  RMCP_GUIDELINES.md
mcp-wallet/src/: error.rs  eth_client.rs  lib.rs  main.rs  wallet.rs  wallet_storage.rs
mcp-wallet/src/commands/: handlers.rs  mcp.rs  mod.rs  tool_definition.rs
mcp-wallet/src/models/: mod.rs  network.rs  transaction.rs
mcp-wallet/src/service/: mod.rs
mcp-wallet/src/transaction/: builder.rs  mod.rs
mcp-wallet/tests/: eth_client_tests.rs  mcp_server_tests.rs  tool_definition_tests.rs  transaction_builder_tests.rs  transaction_model_tests.rs  transaction_tests.rs  wallet_alias_resolution_tests.rs  wallet_tests.rs
repl/: Cargo.toml  README.md  RIG_GUIDELINES.md
repl/src/: agent.rs  config.rs  lib.rs  main.rs
repl/src/tools/: mcp_wallet.rs  mod.rs  web_search.rs
repl/tests/: e2e_agent_mcp_wallet_send.rs  e2e_alias_resolution_tests.rs  e2e_alias_send_flow_tests.rs  e2e_alias_watch_only_tests.rs  e2e_import_private_key_tests.rs  e2e_mcp_wallet_tests.rs  e2e_tests.rs  e2e_web_search_tests.rs  repl_tests.rs  web_search_unit_tests.rs
repl/tests/test_utils/: anvil.rs
tasks/: prd-default-file-logging.md  prd-eth-rpc-client.md  prd-google-web-search.md  prd-mcp-compliance-upgrade.md  prd-mcp-wallet-alias-resolution.md  prd-repl-app.md  prd-repl-testing.md  tasks-prd-eth-rpc-client.md  tasks-prd-google-web-search.md  tasks-prd-mcp-compliance-upgrade.md  tasks-prd-mcp-wallet-alias-and-private-key-import.md  tasks-prd-mcp-wallet-alias-resolution.md  tasks-prd-mcp-wallet-repl-integration.md  tasks-prd-mcp-wallet-server.md  tasks-prd-refactor-tests-structure.md  tasks-prd-repl-app.md  tasks-prd-repl-chat-memory.md  tasks-prd-tool-definition-endpoint.md
tasks/done/: prd-mcp-wallet-alias-and-private-key-import.md  prd-mcp-wallet-repl-integration.md  prd-refactor-tests-structure.md  prd-repl-chat-memory.md  tasks-prd-default-file-logging.md  tasks-prd-eth-rpc-client.md  tasks-prd-google-web-search.md  tasks-prd-mcp-wallet-repl-integration.md  tasks-prd-repl-app.md  tasks-prd-repl-chat-memory.md  tasks-repl-testing.md
tasks/obsolete/: prd-mcp-wallet-server.md  prd-tool-definition-endpoint.md  prd-web-search.md  tasks-web-search.md
