[package]
name = "mcp-wallet"
version = "0.1.0"
edition = "2021"
description = "MCP Wallet Server for Ethereum"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = ""
documentation = ""
readme = "README.md"

[lib]
name = "mcp_wallet"
path = "src/lib.rs"

[[bin]]
name = "mcp-wallet"
path = "src/main.rs"

[features]
default = ["ethers/rustls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
ethers = { version = "2.0", features = ["legacy"], default-features = false }
hex = "0.4"
log = "0.4.21"
prettytable-rs = "0.10.0"
rpassword = "7.3.1"
rand = "0.8"
rmcp = { version = "0.6.3", features = ["macros", "client"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.1.0"
rmcp = { version = "0.6.3", features = ["macros"] }
