[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
dirs = "6.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
rig-core = "0.19.0"
rustyline = { version = "17.0.1", features = ["derive"] }
rustyline-derive = "0.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.38.1", features = ["sync", "macros", "rt-multi-thread"] }
mcp-wallet = { path = "../mcp-wallet" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
rmcp = "0.6.3"

[dev-dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
tempfile = "3.21.0"
httpmock = "0.7.0"
rand = "0.8.5"
regex = "1.11.1"
